most of background section done

--- a/mainmatter/01_introduction.tex
+++ b/mainmatter/01_introduction.tex
@@ -63,6 +63,7 @@ This thesis will follow a simple 5 chapter structure. This section concludes the
 
 % google scholar
 
+
 \nocite{tsai2006review}
 \nocite{tao2005improving}
 \nocite{kundel2022user}
@@ -103,7 +104,24 @@ This thesis will follow a simple 5 chapter structure. This section concludes the
 \nocite{rodriguez2004mar}
 \nocite{deutschmann2022broadband}
 \nocite{ma2023network}
+\nocite{rischke20215g}
+\nocite{walia20175g}
+\nocite{prados20215g}
+\nocite{saadat2018multipath}
+\nocite{seppanen2016multipath}
+\nocite{perkins2003rfc3561}
+\nocite{rekhter2006border}
+\nocite{allman2012comments}
+\nocite{gettys2011bufferbloat}
+\nocite{pan2000choke}
+\nocite{ahlswede2000network}
+\nocite{luby2007raptor}
 \nocite{appleby2012murmurhash3}
+\nocite{3gpp.36.300}
+\nocite{3gpp.23.501}
+\nocite{3gpp.29.060}
+\nocite{ietf-detnet-pof-08}
+
 
 %%=========================================
 
