--- a/refs.bib
+++ b/refs.bib
@@ -376,9 +376,167 @@
   year={2023},
   organization={IEEE}
 }
+
+@article{rischke20215g,
+  title={5G campus networks: A first measurement study},
+  author={Rischke, Justus and Sossalla, Peter and Itting, Sebastian and Fitzek, Frank HP and Reisslein, Martin},
+  journal={IEEE Access},
+  volume={9},
+  pages={121786--121803},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{walia20175g,
+  title={5G Micro-operators for the future campus: A techno-economic study},
+  author={Walia, Jaspreet Singh and H{\"a}mm{\"a}inen, Heikki and Matinmikko, Marja},
+  booktitle={2017 internet of things business models, users, and networks},
+  pages={1--8},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{prados20215g,
+  title={5G non-public networks: Standardization, architectures and challenges},
+  author={Prados-Garzon, Jonathan and Ameigeiras, Pablo and Ordonez-Lucena, Jose and Mu{\~n}oz, Pablo and Adamuz-Hinojosa, Oscar and Camps-Mur, Daniel},
+  journal={IEEE Access},
+  volume={9},
+  pages={153893--153908},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{saadat2018multipath,
+  title={Multipath multihop mmWave backhaul in ultra-dense small-cell network},
+  author={Saadat, Salman and Chen, Da and Jiang, Tao},
+  journal={Digital Communications and Networks},
+  volume={4},
+  number={2},
+  pages={111--117},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@inproceedings{seppanen2016multipath,
+  title={Multipath routing for mmWave WMN backhaul},
+  author={Sepp{\"a}nen, Kari and Kilpi, Jorma and Paananen, Jori and Suihko, Tapio and Wainio, Pekka and Kapanen, Jouko},
+  booktitle={2016 IEEE International Conference on Communications Workshops (ICC)},
+  pages={246--253},
+  year={2016},
+  organization={IEEE}
+}
+
+@misc{perkins2003rfc3561,
+  title={RFC3561: Ad hoc on-demand distance vector (AODV) routing},
+  author={Perkins, Charles and Belding-Royer, Elizabeth and Das, Samir},
+  year={2003},
+  publisher={RFC editor}
+}
+
+@techreport{rekhter2006border,
+  title={A border gateway protocol 4 (BGP-4)},
+  author={Rekhter, Yakov and Li, Tony and Hares, Susan},
+  year={2006}
+}
+
+@article{allman2012comments,
+  title={Comments on bufferbloat},
+  author={Allman, Mark},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={43},
+  number={1},
+  pages={30--37},
+  year={2012},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{gettys2011bufferbloat,
+  title={Bufferbloat: Dark buffers in the internet},
+  author={Gettys, Jim},
+  journal={IEEE Internet Computing},
+  volume={15},
+  number={3},
+  pages={96--96},
+  year={2011},
+  publisher={IEEE}
+}
+
+@inproceedings{pan2000choke,
+  title={CHOKe-a stateless active queue management scheme for approximating fair bandwidth allocation},
+  author={Pan, Rong and Prabhakar, Balaji and Psounis, Konstantinos},
+  booktitle={Proceedings IEEE INFOCOM 2000. Conference on Computer Communications. Nineteenth Annual Joint Conference of the IEEE Computer and Communications Societies (Cat. No. 00CH37064)},
+  volume={2},
+  pages={942--951},
+  year={2000},
+  organization={IEEE}
+}
+
+@article{ahlswede2000network,
+  title={Network information flow},
+  author={Ahlswede, Rudolf and Cai, Ning and Li, S-YR and Yeung, Raymond W},
+  journal={IEEE Transactions on information theory},
+  volume={46},
+  number={4},
+  pages={1204--1216},
+  year={2000},
+  publisher={IEEE}
+}
+
+@techreport{luby2007raptor,
+  title={Raptor forward error correction scheme for object delivery},
+  author={Luby, Michael and Shokrollahi, Amin and Watson, Mark and Stockhammer, Thomas},
+  year={2007}
+}
 @article{appleby2012murmurhash3,
   title={MurmurHash3, 2012},
   author={Appleby, Austin},
   journal={URL: https://github. com/aappleby/smhasher/blob/master/src/MurmurHash3. cpp},
   year={2012}
+}
+@techreport{3gpp.36.300,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {04},
+ note = {Version 17.4.0},
+ number = {36.300},
+ title = {{Evolved Universal Terrestrial Radio Access (E-UTRA) and Evolved Universal Terrestrial Radio Access Network (E-UTRAN); Overall description; Stage 2}},
+ type = {Technical Specification (TS)},
+ year = {2023}
+}
+
+@techreport{3gpp.23.501,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {04},
+ note = {Version 17.8.0},
+ number = {23.501},
+ title = {{System architecture for the 5G System}},
+ type = {Technical Specification (TS)},
+ year = {2023}
+}
+
+@techreport{3gpp.29.060,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {10},
+ note = {Version 17.4.0},
+ number = {29.060},
+ title = {{General Packet Radio Service (GPRS); GPRS Tunnelling Protocol (GTP) across the Gn and Gp interface}},
+ type = {Technical Specification (TS)},
+ year = {2022}
+}
+@techreport{ietf-detnet-pof-08,
+    number =    {draft-ietf-detnet-pof-08},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-detnet-pof/08/},
+    author =    {Balazs Varga and János Farkas and Stephan Kehrer and Tobias Heer},
+    title =     {{Deterministic Networking (DetNet): Packet Ordering Function}},
+    pagetotal = 12,
+    year =      2023,
+    month =     dec,
+    day =       21,
+    abstract =  {Replication and Elimination functions of DetNet Architecture can result in out-of-order packets, which is not acceptable for some time-sensitive applications. The Packet Ordering Function (POF) algorithm described herein enables to restore the correct packet order when replication and elimination functions are used in DetNet networks.},
 }
