--- a/non.google.bib
+++ b/non.google.bib
@@ -1,6 +1,53 @@
-@article{murmurhash3,
+@article{appleby2012murmurhash3,
   title={MurmurHash3, 2012},
   author={Appleby, Austin},
   journal={URL: https://github. com/aappleby/smhasher/blob/master/src/MurmurHash3. cpp},
   year={2012}
+}
+@techreport{3gpp.36.300,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {04},
+ note = {Version 17.4.0},
+ number = {36.300},
+ title = {{Evolved Universal Terrestrial Radio Access (E-UTRA) and Evolved Universal Terrestrial Radio Access Network (E-UTRAN); Overall description; Stage 2}},
+ type = {Technical Specification (TS)},
+ year = {2023}
+}
+
+@techreport{3gpp.23.501,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {04},
+ note = {Version 17.8.0},
+ number = {23.501},
+ title = {{System architecture for the 5G System}},
+ type = {Technical Specification (TS)},
+ year = {2023}
+}
+
+@techreport{3gpp.29.060,
+ author = {3GPP},
+ institution = {{3rd Generation Partnership Project (3GPP)}},
+ month = {10},
+ note = {Version 17.4.0},
+ number = {29.060},
+ title = {{General Packet Radio Service (GPRS); GPRS Tunnelling Protocol (GTP) across the Gn and Gp interface}},
+ type = {Technical Specification (TS)},
+ year = {2022}
+}
+@techreport{ietf-detnet-pof-08,
+    number =    {draft-ietf-detnet-pof-08},
+    type =      {Internet-Draft},
+    institution =   {Internet Engineering Task Force},
+    publisher = {Internet Engineering Task Force},
+    note =      {Work in Progress},
+    url =       {https://datatracker.ietf.org/doc/draft-ietf-detnet-pof/08/},
+    author =    {Balazs Varga and János Farkas and Stephan Kehrer and Tobias Heer},
+    title =     {{Deterministic Networking (DetNet): Packet Ordering Function}},
+    pagetotal = 12,
+    year =      2023,
+    month =     dec,
+    day =       21,
+    abstract =  {Replication and Elimination functions of DetNet Architecture can result in out-of-order packets, which is not acceptable for some time-sensitive applications. The Packet Ordering Function (POF) algorithm described herein enables to restore the correct packet order when replication and elimination functions are used in DetNet networks.},
 }
